# sephi

./: CMakeLists.txt  build.bat  build.sh  install_python.bat  install_python.sh  main.cpp  setup.bat  setup.sh
Config/: dependencies.cmake
Config/Python/: CMakeLists.txt
Config/Tests/: CMakeLists.txt
Include/Rover/: LinearRegressionModel.hpp  Rover.hpp
Include/Rover/Python/: DllExports.hpp  LinearRegressionModel.hpp  Rover.hpp
Source/Python/: Rover.cpp
Source/Tests/: LinearRegressionModelTester.cpp
